--- a/src/components/Auth/AuthForm.module.css
+++ b/src/components/Auth/AuthForm.module.css
@@ -46,7 +46,7 @@
 .actions button {
   cursor: pointer;
   font: inherit;
-  color: white;
+  color: rgb(188, 69, 69);
   background-color: #9f5ccc;
   border: 1px solid #9f5ccc;
   border-radius: 4px;
